# terminal

./: .gitignore  package-lock.json  package.json
src/: App.jsx
src-tauri/: Cargo.toml  db.sqlite-journal  tauri.conf.json
src-tauri/src/: balance.rs  invoice.rs  language.rs  lib.rs  listen.rs  main.rs  models.rs  passphrase.rs  power_on.rs  schema.rs
src/components/keypad/: Keypad.jsx
src/components/loadingScreen/: LoadingScreen.jsx
src/components/payScreen/: Failure.jsx  PayScreen.jsx  Success.jsx
src/components/settings/: Balance.jsx  Currency.jsx  Language.jsx  PrivateKey.jsx  Settings.jsx
